# rs-df2ipc-stream

./: Cargo.toml  README.md  build.sh  df2ipc-stream  ex1.input.json  ex2.input.csv  example.sh
src/: lib.rs
